--- a/templates/site_base_layout.html
+++ b/templates/site_base_layout.html
@@ -16,8 +16,8 @@
 <h1 id="IR-requests-log-navigation" hidden>Requests Log Navigation Bar</h1>
 <ul id="PageNav">
 	<li>
-		<a href="allRequests">
-			All Requests
+		<a href="assignedRequests">
+			Assigned Requests
 		</a>
 	</li>
 	<li>
