--- a/templates/assignedRequests.html
+++ b/templates/assignedRequests.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+
 <!-- begin page content -->
 <div class="row">
 
@@ -25,27 +26,16 @@
 			<!--TOP LEVEL: For each item (analyst) in the analystList, which was passed to this page by app.py-->
 			<!--For sorting reference: https://jinja.palletsprojects.com/en/2.11.x/templates/#sort-->
 			{% for analyst in analystList|sort(attribute="lastName") %}
+			{% set total_req = namespace(value=0) %}
 
 			{% set a_fullname = analyst[3] %}
 			{% set a_firstname = analyst[1] %}
 			{% set a_lastname = analyst[2] %}
 
-			<!--To calculate the number of requests per analyst-->
-			{% set total_req = namespace(value=0) %}
-			{% for x in db %}
-			<!--If an analyst exists for the request (value is not NULL)-->
-			{% if x[16] != None %}
-			{% set db_assignedTo = x[16] %}
-			<!--Split the first and last name so we can match against firstName and lastName column in assignedTo table-->
-			{% set splitname = db_assignedTo.split() %}
-			<!--Extra safety - if either the full name matches the full analyst name
-			OR the first name matches analyst[1] (a_firstname) AND last name matches analyst[2] (a_lastname),
-		    then count that request as being assigned to that analyst-->
-			{% if(( x[16] == a_fullname ) or ( a_lastname == splitname[1] and a_firstname == splitname[0] )) %}
-			{% set total_req.value = total_req.value + 1 %}
-			{% endif %}
-			{% endif %}
-			{% endfor %}
+
+			{% from "_analystcounthelper.html" import sum_up_requests_for_each_analyst %}
+			{{ sum_up_requests_for_each_analyst(db, total_req, a_fullname, a_firstname, a_lastname) }}
+
 
 			<!--Accordian structure-->
 			<div id="accordion-{{ loop.index }}" role="tablist">
@@ -73,28 +63,18 @@
 						%}
 
 						<!--For fetching rqstTitle-->
-						{% if x[13] != None %}
-						{% set request_title = x[13] %}
-						{% endif %}
-						<!--If rqstTitle null, fetch rqstURL-->
-						{% if x[13] == None %}
-						{% set request_title = x[10] %}
-						{% endif %}
+						{% set request_title = namespace(word="None") %}
+						{% from "_titlePChelper.html" import find_request_title %}
+						{{ find_request_title(x, request_title) }}
 
 						<!--For finding priority request code-->
 						{% set priorityCodeWord = namespace(word="None") %}
-						{% if x[17] != None %}
-						{% set xpcid = x[17].strip() %}
-						{% for pc in prioritydb %}
-						{% if xpcid == pc[0].strip() %}
-						{% set priorityCodeWord.word = pc[1].strip() %}
-						{% endif %}
-						{% endfor %}
-						{% endif %}
+						{% from "_titlePChelper.html" import find_PC_word %}
+						{{ find_PC_word(x, priorityCodeWord, prioritydb) }}
 
 						<div class="card-body">
 							<label for="title"><span>Request:</span></label><input type="text" id="title"
-								value="{{request_title}}" class="readonly-input-field" readonly>
+								value="{{request_title.word}}" class="readonly-input-field" readonly>
 							<label for="description"><span>Description:</span></label><textarea id="description"
 								class="readonly-textarea-field" readonly>{{x[11]}}</textarea>
 							<label for="formid"><span>Request ID:</span></label><input type="text" id="formid"
@@ -134,22 +114,9 @@
 			{% set a_firstname = analyst[1] %}
 			{% set a_lastname = analyst[2] %}
 
-			<!--To calculate the number of requests per analyst-->
 			{% set total_req = namespace(value=0) %}
-			{% for x in reviewdb %}
-			<!--If an analyst exists for the request (value is not NULL)-->
-			{% if x[16] != None %}
-			{% set db_assignedTo = x[16] %}
-			<!--Split the first and last name so we can match against firstName and lastName column in assignedTo table-->
-			{% set splitname = db_assignedTo.split() %}
-			<!--Extra safety - if either the full name matches the full analyst name
-			OR the first name matches analyst[1] (a_firstname) AND last name matches analyst[2] (a_lastname),
-		    then count that request as being assigned to that analyst-->
-			{% if(( x[16] == a_fullname ) or ( a_lastname == splitname[1] and a_firstname == splitname[0] )) %}
-			{% set total_req.value = total_req.value + 1 %}
-			{% endif %}
-			{% endif %}
-			{% endfor %}
+			{% from "_analystcounthelper.html" import sum_up_requests_for_each_analyst %}
+			{{ sum_up_requests_for_each_analyst(reviewdb, total_req, a_fullname, a_firstname, a_lastname) }}
 
 			<!--Accordian structure-->
 			<div id="accordion2-{{ loop.index }}" role="tablist">
@@ -176,29 +143,22 @@
 						{% if(( x[16] == a_fullname ) or ( a_lastname == splitname[1] and a_firstname == splitname[0] ))
 						%}
 
+
 						<!--For fetching rqstTitle-->
-						{% if x[13] != None %}
-						{% set request_title = x[13] %}
-						{% endif %}
-						<!--If rqstTitle null, fetch rqstURL-->
-						{% if x[13] == None %}
-						{% set request_title = x[10] %}
-						{% endif %}
+						{% set request_title = namespace(word="None") %}
+						{% from "_titlePChelper.html" import find_request_title %}
+						{{ find_request_title(x, request_title) }}
+
 
 						<!--For finding priority request code-->
 						{% set priorityCodeWord = namespace(word="None") %}
-						{% if x[17] != None %}
-						{% set xpcid = x[17].strip() %}
-						{% for pc in prioritydb %}
-						{% if xpcid == pc[0].strip() %}
-						{% set priorityCodeWord.word = pc[1].strip() %}
-						{% endif %}
-						{% endfor %}
-						{% endif %}
+						{% from "_titlePChelper.html" import find_PC_word %}
+						{{ find_PC_word(x, priorityCodeWord, prioritydb) }}
+
 
 						<div class="card-body">
 							<label for="title"><span>Request:</span></label><input type="text" id="title"
-								value="{{request_title}}" class="readonly-input-field" readonly>
+								value="{{request_title.word}}" class="readonly-input-field" readonly>
 							<label for="description"><span>Description:</span></label><textarea id="description"
 								class="readonly-textarea-field" readonly>{{x[11]}}</textarea>
 							<label for="formid"><span>Request ID:</span></label><input type="text" id="formid"
