--- a/templates/unassigned.html
+++ b/templates/unassigned.html
@@ -29,26 +29,17 @@
 							<a class="collapsed" data-toggle="collapse" href="#collapse-{{ loop.index }}"
 								aria-expanded="true" aria-controls="collapse-{{ loop.index }}">
 
-								<!--<i class="fa fa-angle-down rotate-icon"></i>-->
 								<!--For fetching rqstTitle-->
-								{% if x[13] != None %}
-								{{x[13]}}
-								{% endif %}
-								<!--If rqstTitle null, fetch rqstURL-->
-								{% if x[13] == None %}
-								{{x[10]}}
-								{% endif %}
+								{% set request_title = namespace(word="None") %}
+								{% from "_titlePChelper.html" import find_request_title %}
+								{{ find_request_title(x, request_title) }}
+
+								{{ request_title.word }}
 
 								<!--For finding priority request code-->
 								{% set priorityCodeWord = namespace(word="None") %}
-								{% if x[17] != None %}
-								{% set xpcid = x[17].strip() %}
-								{% for pc in prioritydb %}
-								{% if xpcid == pc[0].strip() %}
-								{% set priorityCodeWord.word = pc[1].strip() %}
-								{% endif %}
-								{% endfor %}
-								{% endif %}
+								{% from "_titlePChelper.html" import find_PC_word %}
+								{{ find_PC_word(x, priorityCodeWord, prioritydb) }}
 							</a>
 						</h5>
 					</div>
@@ -116,20 +107,9 @@
 
 					<!--To calculate the number of requests per analyst-->
 					{% set total_req = namespace(value=0) %}
-					{% for x in db_and_reviewdb %}
-					<!--If an analyst exists for the request (value is not NULL)-->
-					{% if x[16] != None %}
-					{% set db_assignedTo = x[16] %}
-					<!--Split the first and last name so we can match against firstName and lastName column in assignedTo table-->
-					{% set splitname = db_assignedTo.split() %}
-					<!--Extra safety - if either the full name matches the full analyst name
-			OR the first name matches analyst[1] (a_firstname) AND last name matches analyst[2] (a_lastname),
-		    then count that request as being assigned to that analyst-->
-					{% if(( x[16] == a_fullname ) or ( a_lastname == splitname[1] and a_firstname == splitname[0] )) %}
-					{% set total_req.value = total_req.value + 1 %}
-					{% endif %}
-					{% endif %}
-					{% endfor %}
+					{% from "_analystcounthelper.html" import sum_up_requests_for_each_analyst %}
+					{{ sum_up_requests_for_each_analyst(db_and_reviewdb, total_req, a_fullname, a_firstname, a_lastname)
+					}}
 					<tr>
 						<td>{{a_lastname}}, {{a_firstname}}
 						<td>{{total_req.value}}
