Added column for update form button to search table

--- a/templates/search.html
+++ b/templates/search.html
@@ -31,6 +31,7 @@
                     {{ render_field(form.search2) }}
                     {{ render_field(form.search3) }}
                     {{ render_field(form.search4) }}
+                    {{ render_field(form.search5) }}
                     <p><input type="submit" value="Search">
                     </p>
                 </form>
